# Racing-LMPC-ROS2

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  racing_mpc_function.h  search.html
.github/workflows/: ros2-humble-ci.yaml
docs/: index.md
docs/tips/: cpu_affinity.md
src/common/lmpc_msgs/: CMakeLists.txt
src/common/lmpc_msgs/msg/: BehaviorStratergy.msg  MPCTelemetry.msg  TrajectoryCommand.msg
src/common/lmpc_msgs/srv/: SolveMPC.srv
src/controllers/racing_lmpc/launch/: racing_lmpc.launch.py
src/controllers/vanilla_controller/launch/: vanilla_controller.launch.py
src/launch/racing_lmpc_launch/: package.xml
src/mpc/base_mpc/: CMakeLists.txt  package.xml
src/mpc/base_mpc/src/: base_mpc.cpp
src/mpc/racing_lqr/: CMakeLists.txt  package.xml
src/mpc/racing_lqr/src/: racing_lqr.cpp  racing_lqr_node.cpp  ros_param_loader.cpp
src/mpc/racing_mpc/: CMakeLists.txt
src/mpc/racing_mpc/launch/: racing_mpc.launch.py  racing_mpc_putnam.launch.py
src/mpc/racing_mpc/param/: sample_mpc.param.yaml  sample_mpc_2.param.yaml
src/mpc/racing_mpc/src/: multi_mpc_manager.cpp  racing_convex_mpc.cpp  racing_follow_mpc.cpp  racing_mpc.cpp  racing_mpc_export.cpp  racing_mpc_function.cpp  racing_mpc_manager.cpp  (+5 more)
src/tools/lmpc_utils/: CMakeLists.txt  package.xml
src/tools/torch_casadi_interface/: CMakeLists.txt  package.xml
src/tools/vehicle_state_visualizer/: CMakeLists.txt  package.xml
src/tools/vehicle_state_visualizer/include/vehicle_state_visualizer/: vehicle_state_visualizer_node.hpp
src/tools/vehicle_state_visualizer/src/: vehicle_state_visualizer_node.cpp
src/vehicle_dynamics_models/neural_dynamics_model/: CMakeLists.txt  package.xml
src/vehicle_dynamics_models/racing_trajectory/: CMakeLists.txt  package.xml
tools/docker/: galactic.dockerfile
tools/scripts/: source_all.sh  useful_commands.sh
(+104 files in other folders)
